Day10-more-fun-events

--- a/more-fun-event/index.html
+++ b/more-fun-event/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <button id="but1">Click!</button>
     <button id="but2">Click!</button>
+
+    <input type="text" id="input" value="blue">
     <button id="but3">Click!</button>
     
 
